[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/enemies/slimeBlue.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/slimeBlue1.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/slimeBlue2.png" type="Texture" id=3]
[ext_resource path="res://scenes/ennemi.gd" type="Script" id=4]
[ext_resource path="res://assets/bgmusicsound/jump_enemies.wav" type="AudioStream" id=5]




[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "mort",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.3041, 8.60155 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.3886, 9.15527 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23.6454, 9.02202 )

[node name="ennemi" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 2147483683
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8.35 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2147483649

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -9.69272 )
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483649

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0, 8.35 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
